<resources>
    <string name="app_name">PonX</string>
    <string name="hello">Hello</string>
    <string name="user">User</string>
    <string name="light_water"><![CDATA[Light & Water]]></string>
    <string name="schedule">Schedule</string>
    <string name="monitor">Monitor</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="ponx_update">PonX Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="water_control">Water Control</string>

    <string name="elementName_N">Nitrogen</string>
    <string name="elementName_P">Phosphorus</string>
    <string name="elementName_K">Potassium</string>
    <string name="elementName_H">Moisture Levels</string>
    <string name="elementValue">#</string>
    <string name="elementShort_N">N</string>
    <string name="elementShort_P">P</string>
    <string name="elementShort_K">K</string>
    <string name="elementShort_H">H2O</string>

    <string name="light_control">Light Control</string>
    <string name="select_one">Select one:</string>
    <string name="medium_water">Medium Water</string>
    <string name="lightly_water">Lightly Water</string>
    <string name="heavy_water">Heavy Water</string>
    <string name="back">Back</string>
    <string name="basil">Basil</string>
    <string name="blueberry">Blueberry</string>
    <string name="beans">Beans</string>
    <string name="cantaloupe">Cantaloupe</string>
    <string name="celery">Celery</string>
    <string name="cilantro">Cilantro</string>
    <string name="cucumber">Cucumber</string>
    <string name="grape">Grape</string>
    <string name="lettuce">Lettuce</string>
    <string name="raspberry">Raspberry</string>
    <string name="potato">Potato</string>
    <string name="squash">Squash</string>
    <string name="strawberry">Strawberry</string>
    <string name="tomato">Tomato</string>
    <string name="watermelon">Watermelon</string>
    <string name="plant">Plant</string>
    <string name="select_your_plant">Select your plant</string>
    <string name="rosemary">Rosemary</string>
    <string name="W_on">On</string>
    <string name="W_off">Off</string>
    <string name="L_off">Off</string>
    <string name="L_on">On</string>

    <string-array name="elements_full_name">
        <item>Moisture Level</item>
        <item>Nitrogen</item>
        <item>Phosphorus</item>
        <item>Potassium</item>
    </string-array>

    <string-array name="elements_abrev_name">
        <item>H2O</item>
        <item>N</item>
        <item>P</item>
        <item>K</item>
    </string-array>

    <string-array name="elements_descrip">
        <item>Value of ...</item>
        <item>N..</item>
        <item>P..</item>
        <item>K..</item>
    </string-array>
</resources>