<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Schedule"
    android:background="@drawable/greentwo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_one"
        android:textSize="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="50dp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:text="@string/lightly_water"
        android:id="@+id/LevelALight"
        android:background="@color/black"
        android:textColor="@color/cWhite"
        android:textStyle="bold"
        android:textSize="17sp"/>

    <Button
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:text="@string/medium_water"
        android:id="@+id/LevelBMedium"
        android:background="@color/black"
        android:textColor="@color/cWhite"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginTop="25dp"/>

    <Button
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:text="@string/heavy_water"
        android:id="@+id/LevelCHeavy"
        android:background="@color/black"
        android:textColor="@color/cWhite"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginTop="25dp"/>

    <Button
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/LevelBack"
        android:background="@color/black"
        android:textColor="@color/cWhite"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginTop="140dp"/>

</LinearLayout>