<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenthree"
    tools:context=".plant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="50dp"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            app:cardCornerRadius="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/select_your_plant"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:paddingTop="25sp"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"/>

                <ImageView
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:padding="15sp"
                    android:src="@drawable/ponxlogo"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginLeft="10sp"
            android:rowCount="2"
            android:columnCount="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/pbasil"
                app:cardElevation="50dp"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/cWhite"
                app:cardCornerRadius="15sp"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/basil"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pbeans"
                app:cardElevation="50dp"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/cWhite"
                app:cardCornerRadius="15sp"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beans"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pblueberry"
                app:cardElevation="50dp"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/cWhite"
                app:cardCornerRadius="15sp"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blueberry"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pcantaloupe"
                app:cardElevation="50dp"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/cWhite"
                app:cardCornerRadius="15sp"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cantaloupe"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pcelery"
                app:cardElevation="50dp"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/cWhite"
                app:cardCornerRadius="15sp"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celery"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pcilantro"
                app:cardElevation="50dp"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/cWhite"
                app:cardCornerRadius="15sp"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cilantro"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pcucumber"
                app:cardElevation="50dp"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/cWhite"
                app:cardCornerRadius="15sp"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cucumber"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pgrape"
                app:cardElevation="50dp"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/cWhite"
                app:cardCornerRadius="15sp"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grape"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/plettuce"
                app:cardElevation="50dp"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/cWhite"
                app:cardCornerRadius="15sp"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lettuce"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ppotato"
                app:cardElevation="50dp"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/cWhite"
                app:cardCornerRadius="15sp"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/potato"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/prosemary"
                app:cardElevation="50dp"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/cWhite"
                app:cardCornerRadius="15sp"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rosemary"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/psquash"
                app:cardElevation="50dp"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/cWhite"
                app:cardCornerRadius="15sp"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/squash"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pstrawberry"
                app:cardElevation="50dp"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/cWhite"
                app:cardCornerRadius="15sp"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strawberry"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ptomato"
                app:cardElevation="50dp"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/cWhite"
                app:cardCornerRadius="15sp"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tomato"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pwatermelon"
                app:cardElevation="50dp"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/cWhite"
                app:cardCornerRadius="15sp"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/watermelon"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pplant"
                app:cardElevation="50dp"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/cWhite"
                app:cardCornerRadius="15sp"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plant"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"/>
            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>

</ScrollView>